fix: remove text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  height: auto;
   @media screen and (max-width: 950px) {
     overflow-x: hidden !important;
   }
@@ -25,6 +24,7 @@ p {
 
 body {
   background: url("../images/sky_4\ _7.png") top center/cover;
+  overflow-x: hidden !important;
 }
 
 a {
@@ -107,7 +107,7 @@ a {
   @media screen and (max-width: 500px) {
     width: auto;
     text-align: center;
-    height: auto;
+    height: max-content;
     font-size: 16px;
   }
   font-size: 32px;
@@ -126,7 +126,7 @@ a {
   }
 }
 .text-footer-1 {
-  width: 216px;
+  /* width: 216px; */
   height: 52px;
   font-size: 19px;
   line-height: 28px;
@@ -136,7 +136,7 @@ a {
   text-align: right;
 }
 .text-footer-2 {
-  width: 562px;
+  /* width: 562px; */
   height: 79px;
   font-size: 19px;
   text-decoration: none;
@@ -148,12 +148,14 @@ a {
   text-align: right;
   @media screen and(max-width:500px) {
     height: max-content;
+    width: max-content;
     background-color: rebeccapurple;
   }
 }
 .text-footer-2 a {
   text-decoration: none;
   color: inherit;
+  width: max-content;
 }
 
 .mt {
@@ -165,7 +167,7 @@ a {
 .border-l {
   border-left: 1.5px solid white;
   text-align: center;
-  padding: 0rem 0.5rem;
+  padding: 0rem 1rem;
 
   @media screen and (max-width: 500px) {
     border: none;
@@ -187,31 +189,30 @@ a {
 .logo {
   margin-top: -60px;
 }
-.logo-top {
-  transform: translate(-300%, 10%);
-  height: 50px;
-}
 
 /* Hero */
 .hero {
+  overflow: hidden;
   display: flex;
   flex-wrap: wrap-reverse;
 }
 
 /* form box */
 .box {
-  background-color: rebeccapurple;
   padding: 0.5rem;
   background-color: rgba(255, 255, 255, 0.3);
   margin-bottom: 4rem;
   position: relative;
-  overflow: hidden;
-  width: 444px;
-  /* height: 292px; */
+  padding: 0 2rem;
+  width: max-content;
+  height: 292px;
   @media screen and (max-width: 500px) {
-    /* width: auto; */
+    width: 100%;
+    height: max-content;
     padding-top: 3rem;
-    margin-bottom: 0;
+    /* padding-left: 3rem; */
+    /* padding-right: 3rem; */
+    /* margin-bottom: 0; */
   }
 }
 .circle {
@@ -220,10 +221,10 @@ a {
   border-radius: 117px;
   background-color: #024080;
   border: 8.156000137329102px solid #00ace8;
-  align-items: end;
   position: absolute;
   z-index: 10;
   transform: translate(-110%, -20%);
+  overflow: hidden;
 }
 
 .text-container {
@@ -239,6 +240,7 @@ a {
   transform: rotate(-15deg);
   display: inline-block;
   color: white;
+  direction: rtl;
   text-align: center;
 }
 
@@ -326,9 +328,14 @@ a {
 /* footer */
 .footer {
   height: 107px;
+  width: 100%;
+  overflow: hidden;
   flex-wrap: wrap;
   background-color: #2b9a44;
   @media screen and (max-width: 500px) {
     height: auto;
+    width: 100%;
+
+    padding: 1rem;
   }
 }
